# calibration_and_bias

./: .gitignore  README.md  config.py  main.py  pyproject.toml
src/: prepare_bias_and_ece.py  results_colormap_scatter_plots.py  results_scatter_plot.py  results_separate_images.py  results_tables.py
src/common/: metrics.py  utils.py
src/static/: formatting.py  glioma_types.py  validation_splits.py
