[tool.poetry]
name = "calibration_and_bias"
version = "0.1.0"
description = ""
authors = ["Teodora Popordanoska <teodora.popordanoska@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
scikit-learn = "^0.24.2"
opencv-python = "^4.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
